<resources>
    <string name="app_name">MegaBud</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="color">Colour</string>
    <string name="charts">Charts</string>
    <string name="transactions">Transactions</string>
    <string name="categories">Categories</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="value">Value</string>
    <string name="datetime">Datetime</string>
    <string name="budget">Budget</string>
    <string name="transaction_date">Date: %s\n</string>
    <string name="transaction_value">Value: %.2f %s\n</string>

    <string-array name="palette_names">
        <item>Bright pink</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Chartreuse</item>
        <item>Green</item>
        <item>Spring green</item>
        <item>Cyan</item>
        <item>Azure</item>
        <item>Blue</item>
        <item>Violet</item>
        <item>Magenta</item>
    </string-array>

    <string-array name="currencies">
        <item>NZD</item>
        <item>USD</item>
    </string-array>
</resources>
